--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -8,42 +8,48 @@
 }
 
 .App{
-
-  .row>*{
-    padding: 0;
-    margin: 0;
-  }
+  width: 100vw;
+  height: 100vh;
 
     hr{
       height: 6px;
     }
   
-  // ** ================ Side Bar ================
+    .section-1{
+
+      // ** ================ Side Bar ================
   
-  .SideBar{
-    text-align: center;
+      .SideBar{
+        width: 250px;
+        padding: 0 18px;
 
-    .SideBarHeading{
-      p{
-        font-size: 36px;
-        font-weight: bold;
+        .SideBarHeading{
+          padding-top: 5px;
+
+          p{
+            font-size: 36px;
+            font-weight: bold;
+          }
+        }
+
+        .SideList{
+          display: flex;
+          flex-direction: column;
+
+          .SideListItem{
+            font-weight: bold;
+          }
+
+          p.sideBarLink{
+            cursor: pointer;
+            font-size:large;
+          }
+          
+        }
       }
     }
-
-    .SideList{
-      display: flex;
-      flex-direction: column;
-
-      p.sideBarLink{
-        cursor: pointer;
-        font-size:large
-      }
-      
-    }
-  }
-
-  // ** ================ Main section ================
-  .main{
-    padding: 0 12px;
-  }
+  // ** ================ Section-2 ================
+  // .section-2{
+   
+  // }
 }
