--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -41,15 +41,52 @@
           }
 
           p.sideBarLink{
+            padding: 3px 0 3px 10px;
             cursor: pointer;
             font-size:large;
+            transition: .3s;
+
+            &:hover{
+              background-color: #0954c4;
+            }
+
+            &:focus {
+              background-color: #0954c4;
+            }
           }
           
         }
       }
     }
   // ** ================ Section-2 ================
-  // .section-2{
-   
-  // }
+  .section-2{
+    .Product{
+      .ProductTable{
+        .table{
+          max-height: 500px;
+          overflow: scroll;
+        }  
+      }
+    }
+  }
+
+}
+
+
+// ** =================== Not Found ==============
+.ErrorPage {
+  height: 100vh;
+  background-color: rgb(255, 183, 183);
+  color: #721c24;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  h1{
+    font-size: 5rem;
+  }
+  P{
+    font-size: 2rem;
+  }
 }
