--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,76 +1,72 @@
 // * ? Import Google Font. Name: Ubuntu
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-.App{
+.App {
   width: 100vw;
   height: 100vh;
 
-    hr{
-      height: 6px;
-    }
-  
-    .section-1{
+  hr {
+    height: 6px;
+  }
 
-      // ** ================ Side Bar ================
-  
-      .SideBar{
-        width: 250px;
-        padding: 0 18px;
+  .section-1 {
+    // ** ================ Side Bar ================
 
-        .SideBarHeading{
-          padding-top: 5px;
+    .SideBar {
+      width: 250px;
+      padding: 0 18px;
 
-          p{
-            font-size: 36px;
-            font-weight: bold;
-          }
+      .SideBarHeading {
+        padding-top: 5px;
+
+        p {
+          font-size: 36px;
+          font-weight: bold;
+        }
+      }
+
+      .SideList {
+        display: flex;
+        flex-direction: column;
+
+        .SideListItem {
+          font-weight: bold;
         }
 
-        .SideList{
-          display: flex;
-          flex-direction: column;
+        p.sideBarLink {
+          padding: 3px 0 3px 10px;
+          cursor: pointer;
+          font-size: large;
+          transition: 0.3s;
 
-          .SideListItem{
-            font-weight: bold;
+          &:hover {
+            background-color: #0954c4;
           }
 
-          p.sideBarLink{
-            padding: 3px 0 3px 10px;
-            cursor: pointer;
-            font-size:large;
-            transition: .3s;
-
-            &:hover{
-              background-color: #0954c4;
-            }
-
-            &:focus {
-              background-color: #0954c4;
-            }
+          &:focus {
+            background-color: #0954c4;
           }
-          
         }
       }
     }
+  }
   // ** ================ Section-2 ================
-  .section-2{
-    .SuggestionTable{
-      
-      .table{
+  .section-2 {
+
+    .SuggestionTable {
+      .table {
         max-height: 300px;
         overflow-y: scroll;
       }
     }
   }
-
 }
-
 
 // ** =================== Not Found ==============
 .ErrorPage {
@@ -82,10 +78,10 @@
   align-items: center;
   flex-direction: column;
 
-  h1{
+  h1 {
     font-size: 5rem;
   }
-  P{
+  P {
     font-size: 2rem;
   }
 }
